sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: value tonb is not a member of Int
  for (k<-0 tonb-1){
            ^